  creating a new order.
- Issue #2068927 by MegaChriz: fixed UcAddressesUnownedException upon completing
  checkout.
- Issue #2323179 by MegaChriz: fixed Undefined property: UcOrder:: in
  uc_addresses_uc_order_address_property_get(), added hook
  hook_uc_addresses_order_load().
- Issue #2450931 by MegaChriz: added tests for getting and setting entity
  properties via the Entity property API.

Ubercart Addresses 7.x-1.0-beta1, 2013-06-07
------------------------------
- Issue #1974976 by MegaChriz: fixed failing upgrade path from uc_addresses
  6.x-1.x.
- Issue #1986798 by MegaChriz: fixed bug where two addresses could be marked
  as the same default type through the API.
- Issue #1986732 by MegaChriz: added feature to change the weight of the
  address form element on the user registration page.
- Issue #1309546 by MegaChriz: added Feeds integration.
- Issue #1424038 by MegaChriz: added "copy address" feature in order
  administration section.

Ubercart Addresses 7.x-1.0-alpha2, 2013-04-18
------------------------------
- Issue #1829348 by MegaChriz: sort countries list after translation.
- Issue #1843562 by MegaChriz: respect Ubercart's "same address for billing
  and delivery by default" setting.
- Issue #1854736 by MegaChriz: fixed notice bug that occurred when having
  a field appearing in one of the address panes only.
- by MegaChriz: moved UcAddressesTextFieldHandler from the example module
  to the main module and renamed the used handler in the example module.
- Issue #1860040 by MegaChriz: ensure an address instance is assigned to
  the order when an user without addresses enters checkout.
- Issue #1866096 by MegaChriz: populate extra fields from previous orders.
- Issue #1871916 by MegaChriz: display a warning when a field handler is
  missing.
- Issue #1894858 by MegaChriz: made API change in UcAddressesPermissions to
  be able to check access for other users.
- Issue #1895918 by MegaChriz: fixed bug where trying to load a non-