@@ -69,8 +69,9 @@ class UcAddressesUcZoneFieldHandler extends UcAddressesUcFieldHandler {
    * Implements UcAddressesFieldHandler::getFormField().
    */
   public function getFormField($form, $form_values) {
+    $address = $this->getAddress();
     $fieldName = $this->getFieldName();
-    $fieldValue = $this->getAddress()->getField($fieldName);
+    $fieldValue = $address->getField($fieldName);
     $default = (isset($form_values[$fieldName])) ? $form_values[$fieldName] : $fieldValue;
     $country_id = (isset($form_values['country'])) ? $form_values['country'] : $this->getAddress()->getField('country');
 
@@ -102,8 +103,15 @@ class UcAddressesUcZoneFieldHandler extends UcAddressesUcFieldHandler {
     }
 
     if (empty($form['#key_prefix'])) {
-      // When no key prefix is set, use the address ID as part of the zone wrapper ID.
-      $zone_wrapper_id = 'uc-address' . $this->getAddress()->getId() . '-zone-wrapper';
+      if ($address instanceof UcAddressesAddress) {
+        // When no key prefix is set, use the address ID as part of the zone wrapper ID.
+        $zone_wrapper_id = 'uc-address' . $address->getId() . '-zone-wrapper';
+      }
+      else {
+        // When no instance of UcAddressesAddress is given, we have no unique
+        // value to create a wrapper for.
+        $zone_wrapper_id = 'uc-address-zone-wrapper';
+      }
     }
     else {
       // When a key prefix is set, make this part of the zone wrapper ID.
@@ -258,8 +266,9 @@ class UcAddressesUcCountryFieldHandler extends UcAddressesUcFieldHandler {
    * Implements UcAddressesFieldHandler::getFormField().
    */
   public function getFormField($form, $form_values) {
+    $address = $this->getAddress();
     $fieldName = $this->getFieldName();
-    $fieldValue = $this->getAddress()->getField($fieldName);
+    $fieldValue = $address->getField($fieldName);
     $default = (isset($form_values[$fieldName])) ? $form_values[$fieldName] : $fieldValue;
 
     $result = db_select('uc_countries')
@@ -284,8 +293,15 @@ class UcAddressesUcCountryFieldHandler extends UcAddressesUcFieldHandler {
     }
 
     if (empty($form['#key_prefix'])) {
-      // When no key prefix is set, use the address ID as part of the zone wrapper ID.
-      $zone_wrapper_id = 'uc-address' . $this->getAddress()->getId() . '-zone-wrapper';
+      if ($address instanceof UcAddressesAddress) {
+        // When no key prefix is set, use the address ID as part of the zone wrapper ID.
+        $zone_wrapper_id = 'uc-address' . $address->getId() . '-zone-wrapper';
+      }
+      else {
+        // When no instance of UcAddressesAddress is given, we have no unique
+        // value to create a wrapper for.
+        $zone_wrapper_id = 'uc-address-zone-wrapper';
+      }
     }
     else {
       // When a key prefix is set, make this part of the zone wrapper ID.
@@ -307,7 +323,7 @@ class UcAddressesUcCountryFieldHandler extends UcAddressesUcFieldHandler {
           ),
         ),
         '#element_validate' => array('uc_addresses_validate_address_field_country'),
-        '#key_prefix' => $form['#key_prefix'],
+        '#key_prefix' => empty($form['#key_prefix']) ? '' : $form['#key_prefix'],
       ),
     );
   }
