@@ -321,4 +321,106 @@ class UcAddressesApiTestCase extends UcAddressesTestCase {
       $this->assertText($address->getFieldValue('city'), 'City was found in the outputted address label.');
     }
   }
+
+  /**
+   * Tests field handler with an UcAddressesSchemaAddress.
+   */
+  public function testFieldHandlerApi() {
+    $schemaAddress = new UcAddressesSchemaAddress();
+    $addressBookAddress = UcAddressesAddressBook::newAddress();
+    $address_values = self::getEditAddressValues();
+
+    foreach ($address_values['values'] as $field => $value) {
+      $schemaAddress->setField($field, $value);
+      $addressBookAddress->setField($field, $value);
+    }
+
+    // Test each handler in action.
+    foreach ($address_values['values'] as $field => $value) {
+      $vars = array(
+        '%field' => $field,
+      );
+
+      $handler = $schemaAddress->getHandler($field);
+      $this->assertTrue($handler instanceof UcAddressesFieldHandler, format_string('The handler for field %field is UcAddressesFieldHandler.', $vars));
+
+      $this->doHandlerTests($schemaAddress, $field, $handler);
+    }
+
+    // Assert that handlers for fields 'name', 'default_shipping' and
+    // 'default_billing' can't be used with an UcAddressesSchemaAddress
+    // instance.
+    foreach (array('address_name', 'default_shipping', 'default_billing') as $field) {
+      $vars = array(
+        '%field' => $field,
+      );
+
+      $handler = $schemaAddress->getHandler($field);
+      $this->assertTrue($handler instanceof UcAddressesMissingFieldHandler, format_string('The handler for field %field is UcAddressesMissingFieldHandler when using UcAddressesSchemaAddress.', $vars));
+
+      // Ensure that calling methods from a missing handler doesn't result into
+      // fatal errors.
+      $this->doHandlerTests($schemaAddress, $field, $handler);
+
+      // Ensure that the handler is not missing for this field with an
+      // UcAddressesAddress instance.
+      $handler = $addressBookAddress->getHandler($field);
+      $this->assertFalse($handler instanceof UcAddressesMissingFieldHandler, format_string('The handler for field %field is not UcAddressesMissingFieldHandler when using UcAddressesAddress.', $vars));
+    }
+  }
+
+  /**
+   * Do handler tests.
+   *
+   * @param UcAddressesSchemaAddress $address
+   *   The address that requested the handler.
+   * @param string $field
+   *   The field that belongs to the handler.
+   * @param UcAddressesFieldHandler $handler
+   *   The handler to test.
+   *
+   * @return void
+   */
+  protected function doHandlerTests(UcAddressesSchemaAddress $address, $field, UcAddressesFieldHandler $handler) {
+    $vars = array(
+      '%field' => $field,
+    );
+
+    $address_values1 = array();
+    $value1 = self::generateAddressFieldValue($field, $address_values1);
+    $address_values2 = array();
+    $value2 = self::generateAddressFieldValue($field, $address_values2);
+
+    // Getters.
+    $this->assertEqual($handler->getFieldName(), $field, format_string('The method getFieldName() for field %field returns the expected value.', $vars));
+    $this->assertEqual($handler->getAddress(), $address, format_string('The method getAddress() for field %field returns the expected value.', $vars));
+    $this->assertTrue(is_string($handler->getContext()), format_string('The method getContext() for field %field returns the expected format.', $vars));
+    $this->assertTrue(is_string($handler->getFieldTitle()), format_string('The method getFieldTitle() for field %field returns the expected format.', $vars));
+
+    $form = array();
+    $form_state = array();
+    $form_field = $handler->getFormField($form, $form_state);
+    $render = drupal_render($form_field);
+
+    $this->assertTrue(is_bool($handler->isFieldEnabled()), format_string('The method isFieldEnabled() for field %field returns the expected format.', $vars));
+    $this->assertTrue(is_bool($handler->isFieldRequired()), format_string('The method isFieldRequired() for field %field returns the expected format.', $vars));
+
+    // Setters.
+    $handler->setValue($value1);
+    $this->assertEqual($address->getField($field), $value1, format_string('The method setValue() had set the expected value.', $vars));
+
+    // Action.
+    $handler->validateValue($value2);
+    $this->assertTrue(is_bool($handler->checkContext()), format_string('The method checkContext() for field %field returns the expected format.', $vars));
+
+    // Feeds.
+    $this->assertTrue(is_array($handler->getMappingTargets()), format_string('The method getMappingTargets() for field %field returns the expected format.', $vars));
+    $handler->mapValue($value2);
+    $this->assertEqual($address->getField($field), $value2, format_string('The method mapValue() for field %field has set the expected value.', $vars));
+
+    // Output.
+    $this->assertTrue(is_array($handler->getTokenInfo()), format_string('The method getTokenInfo() for field %field returns the expected format.', $vars));
+    $this->assertTrue(is_array($handler->getOutputFormats()), format_string('The method getOutputFormats() for field %field returns the expected format.', $vars));
+    $this->assertTrue(is_string($handler->outputValue()), format_string('The method outputValue() for field %field returns the expected format.', $vars));
+  }
 }
