@@ -12,6 +12,8 @@ Ubercart Addresses 7.x-1.x, xxxx-xx-xx
   hook_uc_addresses_order_load().
 - Issue #2450931 by MegaChriz: added tests for getting and setting entity
   properties via the Entity property API.
+- Issue #2461299 by MegaChriz: fixed field handler API does not always work
+  with an UcAddressesSchemaAddress.
 
 Ubercart Addresses 7.x-1.0-beta1, 2013-06-07
 ------------------------------
